arreglando el problema del return

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ table{
 }
 
 .containerInput{
-  align-items: end;
+  align-items: flex-end;
   right: 0;
   display: flex;
   justify-content: flex-end;
